--- a/docs/architecture/isa-manual/src/linxisa-isa-manual.adoc
+++ b/docs/architecture/isa-manual/src/linxisa-isa-manual.adoc
@@ -1,4 +1,4 @@
-= Linx Instruction Set Architecture Manual (Draft)
+= Linx Instruction Set Architecture Manual (v0.3)
 :doctype: book
 :toc: left
 :toclevels: 4
@@ -19,7 +19,7 @@
 :imagesdir: images
 
 // Manual metadata (override when publishing).
-:revnumber: v0.2 (draft)
+:revnumber: v0.3
 :revdate: {localdate}
 
 include::chapters/00_preamble.adoc[]
